alignment issues

--- a/src/Components/LoginBox/LoginBox.css
+++ b/src/Components/LoginBox/LoginBox.css
@@ -72,6 +72,7 @@ button {
     .login-box {
         width: 100%;
         height: 100%;
+        margin: 2px;
         overflow: hidden;
     }
 }
